# ppt-yahe

./: .gitignore  README.md  main.py  pyproject.toml
src/ppt_yahe/: __main__.py  image_slide.py  summary_slide.py  table_utils.py
src/ppt_yahe/builder/: __init__.py  image.py  summary.py  types.py
