[project]
name = "ppt-yahe"
version = "0.1.0"
description = "Generate PowerPoint presentations from experimental measurement data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["python-pptx>=1.0", "pillow>=12.2"]

[project.scripts]
ppt-yahe = "ppt_yahe.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
]
ignore = ["E501"] # line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["ppt_yahe"]
